Fixing control vertical alignments, borders for some of the widgets.

--- a/styles/modules-center/_modulesCenter.scss
+++ b/styles/modules-center/_modulesCenter.scss
@@ -9,7 +9,8 @@ modules-center-container {
 }
 
 date-time-container {
-  background-color: $base-transparent;
+  background-color: $mantle-transparent;
+  border: 2px solid $surface2;
   border-radius: $border-radius;
 }
 
